--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -19,7 +19,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:id="@+id/movieImageView"
-                android:background="@android:color/holo_green_dark"/>
+                android:background="@color/background_col"/>
 
             <TextView
                 android:layout_width="wrap_content"
